public/assets/css/profile.css
.thx-drawer {
  width: 240px;
  max-width: 240px;
  padding: 20px;
  background-color: #111;
  flex-direction: column;
  position: relative;
  z-index: 99;
}
.drawer-select {
  border: 1px solid #5d5d5d;
  width: 200px;
  max-height: 220px;
  height: 220px;
  flex-direction: column;
  position: relative;
  margin-bottom: 1.25rem;
}
.thx-puller-border {
  z-index: 100;
  border: 1px solid #707070;
  position: fixed;
  height: 36px;
  width: 26px;
  top: 360px;
  left: 296px;
  background-color: #222;
  overflow: hidden;
}
.thx-puller {
  transform: rotate(0deg);

  height: 36px;
  width: 26px;
  background-color: #111;
  background-image: url("../images/puller.png");
  background-repeat: no-repeat;
  background-position: center;

  will-change: transform;
  transition: transform 0.2s;
}
.thx-puller.expand {
  transform: rotate(180deg);
}
.thx-puller:hover {
  background-color: #222;
  cursor: pointer;
  background-image: url("../images/puller_w.png");
}
.drawer-select .toolbar {
  position: absolute;
  bottom: 0px;
  width: 100%;
  height: 29px;
  background-color: #222;
  border-top: 1px solid #707070;
  display: flex;
  flex-direction: row-reverse;
}
.drawer-select .icon {
  height: 28px;
  width: 28px;
  max-width: 28px;
  background-size: 20px;
  background-position: center;
  background-repeat: no-repeat;
  background-color: transparent;

  will-change: background-color;
  transition: background-color 0.2s;
}
.toolbar > .icon {
  will-change: opacity;
  transition: opacity 0.3s linear;
}
.toolbar > .icon.add {
  background-image: url("../images/icon_plus.svg");
}
.toolbar > .icon.edit {
  background-image: url("../images/icon_edit.svg");
  display: none;
}
.toolbar > .icon.delete {
  background-image: url("../images/icon_delete.svg");
  display: none;
}
.toolbar > .icon.edit.show,
.toolbar > .icon.delete.show {
  display: block;
}
.toolbar > .icon.up {
  background-image: url("../images/icon_arrow_up.svg");
  position: absolute;
  left: 0;
}
.toolbar > .icon.down {
  background-image: url("../images/icon_arrow_down.svg");
  position: absolute;
  left: 30px;
}
.toolbar > .icon:hover {
  background-color: rgba(255, 255, 255, 0.1);
  cursor: pointer;
}
.toolbar > .icon:active {
  background-color: rgba(0, 0, 0, 0.5);
}
.toolbar > .icon.disabled:hover,
.toolbar > .icon.disabled:active,
.toolbar > .icon.disabled {
  background-color: transparent;
  cursor: default;
  opacity: 0.3;
}
.profile-item {
  max-height: 30px;
  height: 30px;
  border: none;
  color: #ccc;
  text-transform: capitalize;
  padding: 5px 10px 5px 36px;
  font-size: 14px;
  line-height: 20px;
  margin: 0;
  width: 100%;
  position: relative;
  z-index: 1;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow-x: hidden;

  will-change: color, background-color;
  transition:
    color 0.2s,
    background-color 0.2s;
}
input.profile-item {
  z-index: 2;
  font-family: "Roboto", sans-serif;
  position: absolute;
  display: none;
  width: calc(100% - 30px);
  margin-left: 30px;
  border: 1px solid #44d62c;
  box-sizing: border-box;
  background-color: #111 !important;
  padding: 3px 10px 5px 5px;
  line-height: 20px;
}
input.profile-item.show {
  display: block;
}
.profile-item:hover {
  cursor: pointer;
  background-color: rgba(255, 255, 255, 0.1);
}
.profile-item:active {
  color: #44d62c;
  background-color: rgba(255, 255, 255, 0.1);
}
.profile-item.active {
  color: #44d62c;
}
input.profile-item:active {
  color: #ccc;
}
.profile-item::before {
  content: " ";
  width: 20px;
  height: 20px;
  display: block;
  position: absolute;
  left: 10px;
  background-position: center;
}
.profile-item.default::before {
  background-image: url("../images/icon_profiles_default.svg");
}
.profile-item.game::before {
  background-image: url("../images/icon_profiles_game.svg");
}
.profile-item.movie::before {
  background-image: url("../images/icon_profiles_movie.svg");
}
.profile-item.music::before {
  background-image: url("../images/icon_profiles_music.svg");
}
.profile-item.custom::before {
  background-image: url("../images/icon_profiles_custom.svg");
}
.profile-item.default:active::before,
.profile-item.default.active::before {
  background-image: url("../images/profile_sel_default.svg");
}
.profile-item.game:active::before,
.profile-item.game.active::before {
  background-image: url("../images/profile_sel_game.svg");
}
.profile-item.movie:active::before,
.profile-item.movie.active::before {
  background-image: url("../images/profile_sel_movie.svg");
}
.profile-item.music:active::before,
.profile-item.music.active::before {
  background-image: url("../images/profile_sel_music.svg");
}
.profile-item.custom:active::before,
.profile-item.custom.active::before {
  background-image: url("../images/profile_sel_custom.svg");
}
.thx-logo {
  width: 167px;
  height: 24px;
  background-image: url("../images/logo.png");
  background-repeat: no-repeat;
  max-height: 24px;
  margin-bottom: 20px;
  position: absolute;
  bottom: 0px;
  left: 67px;
}
.profile-del {
  flex-direction: column;
  align-items: center;
  position: absolute;
  width: 300px;
  background-color: #111;
  border: 1px solid #c8323c;
  border-radius: 3px;
  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
  padding: 20px;
  left: 127px;
  top: 205px;
  display: flex !important;
  visibility: hidden;
  opacity: 0;

  will-change: visibility, opacity;
  transition:
    visibility 0s,
    opacity 0.3s linear;
}
.profile-del.show {
  visibility: visible;
  opacity: 1;
}
.alert .title {
  font-size: 14px;
  font-weight: bold;
  text-transform: uppercase;
  color: #c8323c;
  text-align: center;
  line-height: 17px;
}
.alert .body-text {
  margin: 10px;
}
.alert div.thx-btn {
  height: 27px;
  width: auto;
  font-size: 12px;
  color: #ffffff;
  text-align: center;
  line-height: 17px;
  background-color: #c8323c;
  padding: 4px 0;
  min-width: 90px;
  border: 1px solid rgba(0, 0, 0, 0.3);
}
#profileList {
  max-height: 189px;
  position: absolute;
  width: 100%;
}

